--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,11 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.freemarker</groupId>-->
-<!--            <artifactId>freemarker</artifactId>-->
-<!--            <version>2.3.31</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
         <!-- druid数据库加密 -->
         <dependency>
             <groupId>com.alibaba</groupId>
