--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <!--            去除自带的log-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -67,7 +74,7 @@
             <version>3.0.0</version>
         </dependency>
 
-         <dependency>
+        <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>3.0.3</version>
@@ -79,12 +86,7 @@
             <artifactId>lombok</artifactId>
             <version>1.18.22</version>
         </dependency>
-        <!--json web token-->
-        <dependency>
-            <groupId>com.auth0</groupId>
-            <artifactId>java-jwt</artifactId>
-            <version>3.8.0</version>
-        </dependency>
+
         <!--VO,DO转换工具-->
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -102,6 +104,13 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j</artifactId>
+            <version>1.3.8.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
