--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,17 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.4</version>
         </dependency>
-
+        <!--log4j-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j</artifactId>
             <version>1.3.8.RELEASE</version>
+        </dependency>
+        <!--db-flway-->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>6.1.0</version>
         </dependency>
 
     </dependencies>
@@ -118,6 +124,18 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>5.1.1</version>
+                <configuration>
+                    <url>jdbc:mysql://192.168.109.128:3306/robin?serverTimezone=Asia/Shanghai&amp;useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=false
+                    </url>
+                    <user>root</user>
+                    <password>Win2003@</password>
+                    <driver>com.mysql.cj.jdbc.Driver</driver>
+                </configuration>
             </plugin>
         </plugins>
     </build>
